@@ -1,3 +1,11 @@
+2019-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/ds390/gen.c: fix bug #2702
+	* device/lib/_rrulonglong.c,
+	* device/lib/_rrslonglong.c: fix bug #2704
+	* support/regression/tests/longlong.c: re-enable tests for
+	  hc08/s08/ds390, add more long long shifting tests
+
 2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/pdk/gen.c:
